Creating html file

--- a/Analytics_Report.qmd
+++ b/Analytics_Report.qmd
@@ -7,10 +7,7 @@ author:
       - name: Southern New Hampshire University
 date: today
 date-format: long
-format:
-  pdf:
-    documentclass: article
-    keep-tex: true
+format: html
 theme: lux
 toc: true
 code-fold: true
